crates/model/tests/compile_fail/rg_declaration_bad_alias.stderr
error: declaration alias `nonexistent` does not match any event
  --> tests/compile_fail/rg_declaration_bad_alias.rs:13:22
   |
13 |         declaration: nonexistent,
   |                      ^^^^^^^^^^^
